# SyNSec-den-Loris

./: LICENSE  README.md
analyzer/: Dockerfile  README.md  loris_analyzer.py  requirements.txt
analyzer/loris_analyzer/: __init__.py  analyzer.py  globals.py  loader.py  memory_trimmer.py  project.py  symbol.py  variable.py
analyzer/loris_analyzer/util/: __init__.py  concretization.py  heap.py  logging.py  utils.py  workspace.py
emulator/: Dockerfile  firmwire.py
emulator/firmwire/: loader.py
emulator/firmwire/emulator/: firmwire.py  guestlogs.py
emulator/firmwire/hw/: glink.py  peripheral.py
emulator/firmwire/util/: logging.py  misc.py
emulator/modkit/mtk/: Makefile  msg_inject_test.c
emulator/modkit/mtk/fuzzers/: lte_rrc.c
emulator/modkit/shannon/: Makefile  afl.c  afl.h  common.h  loris_afl.c  modkit.c  modkit.ld  nasot.h  shannon.c  shannon.h
emulator/modkit/shannon/fuzzers/: loris_sael3.c  (+4 more)
fuzzer/: .gitignore  Cargo.toml  Dockerfile  README.md
fuzzer/grammars/: nrnas.loris  saemm.loris
fuzzer/src/: main.rs  state.rs
fuzzer/src/corpus/: utils.rs
fuzzer/src/feedback/: mod.rs
fuzzer/src/generator/: attribute.rs  grammar.rs  mod.rs  mutator.rs  transition.rs  utils.rs
fuzzer/src/grammar/: attribute.rs  automaton.rs  base.rs  dsl.pest  expression.rs  fast.rs  fast2.rs  mod.rs  parser.rs  rule.rs  utils.rs  validator.rs  worklist.rs
fuzzer/src/input/: field.rs  grammar.rs  mod.rs  rule.rs  state.rs  transition.rs
fuzzer/src/observer/: mod.rs  shmem.rs  utils.rs  variable.rs
ghidra/: btltool.py  utils.py
ghidra/LICENSES/: LICENSE
