[package]
name = "loris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.0.2"
bincode = "1.3.3"
byteorder = "1"
clap = { version = "4.3.0", features = ["derive"] }
libafl = { version = "0.11.2", features = ["std", "derive"]}
libafl_bolts = "0.11.2"
nix = "0.26"
pest = "2.5.2"
pest_derive = "2.5.2"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0"
